--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 <body>
     
+    <header id="cabecalho">
+        <h1 id="titulo">Primeiras semanas - Trybe!</h1>
+
+    </header>
 </body>
 
 </html>
