--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 
     <meta charset="UTF-8">
@@ -13,11 +13,13 @@
 </head>
 
 <body>
-    
+
     <header id="cabecalho">
+        
         <h1 id="titulo">Primeiras semanas - Trybe!</h1>
 
     </header>
+
 </body>
 
 </html>
