--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body>
 
     <header id="cabecalho">
-        
-        <h1 id="titulo">Primeiras semanas - Trybe!</h1>
+
+        <h1 id="titulo"> Primeiras semanas - Trybe! </h1>
+        <img src="./imagens/tata.jpeg" alt="Minha foto" id="minha_foto">
 
     </header>
 
