--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
         <h1 id="titulo"> Primeiras semanas - Trybe! </h1>
         <img src="./imagens/tata.jpeg" alt="Minha foto" id="minha_foto">
 
+        <ol id="licoes_aprendidas">
+            <li> Unix </li>
+            <li> Shell </li>
+            <li> Bash </li>
+            <li> Git </li>
+            <li> GitHub </li>
+            <li> Introdução - HTML e CSS </li>
+            <li> Estrutura de Páginas </li>
+            <li> Primeiros passos em CSS </li>
+            <li> Seletores e posicionamento </li>
+            <li> HTML Semântico </li>
+        </ol>
+        
     </header>
 
 </body>
