--- a/index.html
+++ b/index.html
@@ -13,26 +13,47 @@
 </head>
 
 <body>
-
+    
     <header id="cabecalho">
 
         <h1 id="titulo"> Primeiras semanas - Trybe! </h1>
         <img src="./imagens/tata.jpeg" alt="Minha foto" id="minha_foto">
 
-        <ol id="licoes_aprendidas">
-            <li> Unix </li>
-            <li> Shell </li>
-            <li> Bash </li>
-            <li> Git </li>
-            <li> GitHub </li>
-            <li> Introdução - HTML e CSS </li>
-            <li> Estrutura de Páginas </li>
-            <li> Primeiros passos em CSS </li>
-            <li> Seletores e posicionamento </li>
-            <li> HTML Semântico </li>
-        </ol>
-        
     </header>
+
+        <main>
+
+            <section>
+                <ol id="licoes_aprendidas">
+                    <li> Unix </li>
+                    <li> Shell </li>
+                    <li> Bash </li>
+                    <li> Git </li>
+                    <li> GitHub </li>
+                    <li> Introdução ao HTML e CSS </li>
+                    <li> Estrutura de Páginas </li>
+                    <li> Primeiros passos em CSS </li>
+                    <li> Seletores e posicionamento </li>
+                    <li> HTML Semântico </li>
+                </ol>
+            </section>
+
+            </section>
+                <ul id="licoes_a_aprender">
+                    <li> Introdução ao JavaScript </li>
+                    <li> Primeiro passos em JavaScript </li>
+                    <li> Array e Loop For </li>
+                    <li> Lógica de Programação e Algoritimos </li>
+                    <li> Objetis </li>
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+                </ul>
+            </section>
+
+        </main>
 
 </body>
 
