--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 <body>
     
     <header id="cabecalho">
-
         <h1 id="titulo"> Primeiras semanas - Trybe! </h1>
-        <img src="./imagens/tata.jpeg" alt="Minha foto" id="minha_foto">
-
     </header>
+
+    <img src="./imagens/tata.jpeg" alt="Minha foto" id="minha_foto">
 
                 <ol id="licoes_aprendidas">
                     <li> Unix </li>
@@ -34,6 +33,19 @@
                     <li> HTML Semântico </li>
                 </ol>
 
+                <ul id="licoes_a_aprender">
+                    <li> Unix </li>
+                    <li> Shell </li>
+                    <li> Bash </li>
+                    <li> Git </li>
+                    <li> GitHub </li>
+                    <li> Introdução ao HTML e CSS </li>
+                    <li> Estrutura de Páginas </li>
+                    <li> Primeiros passos em CSS </li>
+                    <li> Seletores e posicionamento </li>
+                    <li> HTML Semântico </li>
+                </ul>
+                
         </main>
 
 </body>
