--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Document</title>
 
     <link rel="stylesheet" href="style.css">
@@ -28,49 +25,76 @@
         </nav>
     </section>
 
-        <ol id="licoes_aprendidas">
-            <li> Unix </li>
-            <li> Shell </li>
-            <li> Bash </li>
-            <li> Git </li>
-            <li> GitHub </li>
-            <li> Introdução ao HTML e CSS </li>
-            <li> Estrutura de Páginas </li>
-            <li> Primeiros passos em CSS </li>
-            <li> Seletores e posicionamento </li>
-            <li> HTML Semântico </li>
-        </ol>
+    <ol id="licoes_aprendidas">
+        <li> Unix </li>
+        <li> Shell </li>
+        <li> Bash </li>
+        <li> Git </li>
+        <li> GitHub </li>
+        <li> Introdução ao HTML e CSS </li>
+        <li> Estrutura de Páginas </li>
+        <li> Primeiros passos em CSS </li>
+        <li> Seletores e posicionamento </li>
+        <li> HTML Semântico </li>
+        </tr>
+    </ol>
 
-        <ul id="licoes_a_aprender">
-            <li> Unix </li>
-            <li> Shell </li>
-            <li> Bash </li>
-            <li> Git </li>
-            <li> GitHub </li>
-            <li> Introdução ao HTML e CSS </li>
-            <li> Estrutura de Páginas </li>
-            <li> Primeiros passos em CSS </li>
-            <li> Seletores e posicionamento </li>
-            <li> HTML Semântico </li>
-        </ul>
-        
-        <article>
-            <h2>O que aprendi até agora?</h2>
-            <p>A Trybe nos ensina desde o primeiro momento como o ramo profissional na area de tecnologia funciona. Aprendi desde Unix e Bash, até a usabilidade para propósitos profissionais do Git e GitHub, proporcionando amplo conhecimento para projetos do dia a dia. Atualmente, estou aprendendo e me aprofundando em Linguagem de Marcação, Linguagem de estilos e o HTML Semântico.</p>
-        </article>
 
-        <section>
-            <aside>
-                <h2>Sobre o aprendizado de 04/11/2021:</h2>
-                <p>Aprendemos sobre o HTML Semântico, sua importancia e diferença das tags. Temos, como exemplo, a tag <span>div</span> usada para separar o conteúdo de uma <span>seção/container</span>, e a própria tag <span>section</span> para a separação de seções.</p>
-            </aside>
-        </section>
+    <ul id="licoes_a_aprender">
+        <li> Unix </li>
+        <li> Shell </li>
+        <li> Bash </li>
+        <li> Git </li>
+        <li> GitHub </li>
+        <li> Introdução ao HTML e CSS </li>
+        <li> Estrutura de Páginas </li>
+        <li> Primeiros passos em CSS </li>
+        <li> Seletores e posicionamento </li>
+        <li> HTML Semântico </li>
+    </ul>
+    
+    <article>
+        <h3> O que aprendi até agora? </h3>
+        <p> A Trybe nos ensina desde o primeiro momento como o ramo profissional na area de tecnologia funciona. Aprendi desde Unix e Bash, até a usabilidade para propósitos profissionais do Git e GitHub, proporcionando amplo conhecimento para projetos do dia a dia. Atualmente, estou aprendendo e me aprofundando em Linguagem de Marcação, Linguagem de estilos e o HTML Semântico. </p>
+    </article>
 
-        </main>
+    <section>
+        <aside>
 
-        <footer id="rodape">
-            <p>Todos os direitos reservados: Tabata.</p>
-        </footer>
+            <h3> Sobre o aprendizado de 04/11/2021:</h3>
+            <p>Aprendemos sobre o HTML Semântico, sua importancia e diferença das tags. Temos, como exemplo, a tag <span>div</span> usada para separar o conteúdo de uma <span>seção/container</span>, e a própria tag <span>section</span> para a separação de seções. </p>
+
+            <table id="tabela">
+                <tr>
+                    <th> Alguns elementos Semanticos </th>
+                </tr>
+                <tr>
+                    <td> article </td>
+                </tr>
+                <tr>
+                    <td> header </td>
+                </tr>
+                <tr>
+                    <td> nav </td>
+                </tr>
+                <tr>
+                    <td> section </td>
+                </tr>
+                <tr>
+                    <td> aside </td>
+                </tr>
+                    <td> footer </td>
+                </tr>
+            </table>
+
+        </aside>
+    </section>
+
+    </main>
+
+    <footer id="rodape">
+        Todos os direitos reservados: Tabata.
+    </footer>
 
 </body>
 
