--- a/index.html
+++ b/index.html
@@ -68,6 +68,31 @@
 
     </section>
 
+    <section>
+        <table id="tabela">
+            <tr>
+                <th> Alguns elementos Semanticos </th>
+            </tr>
+            <tr>
+                <td> article </td>
+            </tr>
+            <tr>
+                <td> header </td>
+            </tr>
+            <tr>
+                <td> nav </td>
+            </tr>
+            <tr>
+                <td> section </td>
+            </tr>
+            <tr>
+                <td> aside </td>
+            </tr>
+                <td> footer </td>
+            </tr>
+        </table>
+    </section>
+
     </main>
 
     <footer id="rodape">
