--- a/index.html
+++ b/index.html
@@ -18,40 +18,41 @@
     </header>
 
     <section>
-        
         <img src="./imagens/tata.jpeg" alt="Minha foto" id="minha_foto">
         <nav>
             <p>Conheça o meu <a href="https://www.linkedin.com/in/tabatasouto/" target="_blank">linkedin!</a></p>
         </nav>
     </section>
 
-    <ol id="licoes_aprendidas">
-        <li> Unix </li>
-        <li> Shell </li>
-        <li> Bash </li>
-        <li> Git </li>
-        <li> GitHub </li>
-        <li> Introdução ao HTML e CSS </li>
-        <li> Estrutura de Páginas </li>
-        <li> Primeiros passos em CSS </li>
-        <li> Seletores e posicionamento </li>
-        <li> HTML Semântico </li>
-        </tr>
-    </ol>
+    <section>
+        <ol id="licoes_aprendidas">
+            <li> Unix </li>
+            <li> Shell </li>
+            <li> Bash </li>
+            <li> Git </li>
+            <li> GitHub </li>
+            <li> Introdução ao HTML e CSS </li>
+            <li> Estrutura de Páginas </li>
+            <li> Primeiros passos em CSS </li>
+            <li> Seletores e posicionamento </li>
+            <li> HTML Semântico </li>
+            </tr>
+        </ol>
 
 
-    <ul id="licoes_a_aprender">
-        <li> Unix </li>
-        <li> Shell </li>
-        <li> Bash </li>
-        <li> Git </li>
-        <li> GitHub </li>
-        <li> Introdução ao HTML e CSS </li>
-        <li> Estrutura de Páginas </li>
-        <li> Primeiros passos em CSS </li>
-        <li> Seletores e posicionamento </li>
-        <li> HTML Semântico </li>
-    </ul>
+        <ul id="licoes_a_aprender">
+            <li> Unix </li>
+            <li> Shell </li>
+            <li> Bash </li>
+            <li> Git </li>
+            <li> GitHub </li>
+            <li> Introdução ao HTML e CSS </li>
+            <li> Estrutura de Páginas </li>
+            <li> Primeiros passos em CSS </li>
+            <li> Seletores e posicionamento </li>
+            <li> HTML Semântico </li>
+        </ul>
+    </section>
     
     <article>
         <h2> O que aprendi até agora? </h2>
@@ -92,8 +93,6 @@
             </tr>
         </table>
     </section>
-
-    </main>
 
     <footer id="rodape">
         Todos os direitos reservados: Tabata.
