--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <section>
-        <img src="./imagens/tata.jpeg" alt="Minha foto" id="minha_foto">
+        <img src="tabata.jpeg" alt="Minha foto" id="minha_foto">
         <nav>
             <p>Conheça o meu <a href="https://www.linkedin.com/in/tabatasouto/" target="_blank">linkedin!</a></p>
         </nav>
